syntax = "proto3";
package actor;

message SetConfigRequest {
  string newConfig = 1;
}

message SetConfigResponse {
  string updatedConfig = 1;
}

service Actor {
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
}
